docs: record owner leaf hotspot diagnosis